--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+  <!-- manifest rel -->
+  <link rel="manifest" href="/manifest.json">
 
   <title>Budget Tracker</title>
 </head>
